# data-visitor-dispatcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.h  data_dispatcher.h  data_visitor.h  logging_visitor.h  main.cpp  mccc_demo.cpp  mccc_static_demo.cpp  processing_visitor.h  receiver.h
examples/: CMakeLists.txt  component_demo.cpp  static_component_demo.cpp
